journals to entries
