# src/router/routes/user/entry/edit-many.ts
@@ -4,7 +4,10 @@ import * as express from "express";
 import { body, validationResult } from "express-validator";
 import { has } from "lodash";
 import { ObjectId } from "mongodb";
-import { findOneById, updateOne } from "../../../../operations/user_operations";
+import {
+  findOneById,
+  updateMany,
+} from "../../../../operations/user_operations";
 import { responses as userResponses } from "../../../../defs/responses/user";
 import { handleCaughtErrorResponse } from "../../../../utils";
 import {
@@ -14,33 +17,54 @@ import {
 import { statusCodes } from "../../../../defs/responses/status_codes";
 
 const router = express.Router();
-const validatedIds = body(["userId", "journalId"]) // TODO convert to zod?
+const validatedUserId = body("userId") // TODO convert to zod?
   .notEmpty()
   .bail()
   .custom((id) => ObjectId.isValid(id))
-  .withMessage("Invalid userId or journalId")
+  .withMessage("Invalid userId")
+  .bail()
+  .escape();
+
+const validatedEntryIds = body("entryIds") // TODO convert to zod?
+  .notEmpty()
+  .bail()
+  .isArray({ min: 1 })
+  .custom((ids: string[]) => ids.every((id) => ObjectId.isValid(id)))
+  .withMessage("Invalid entryIds")
   .bail()
   .escape();
 const validatedStrings = body(["title", "entry", "category"])
   .optional()
   .isString()
+  .bail()
   .escape();
-
 const validatedFavorite = body("favorite").optional().isBoolean().escape();
 
 // TODO validate title entry category
 
 router.post(
   "/",
-  validatedIds,
+  validatedUserId,
+  validatedEntryIds,
   validatedStrings,
   validatedFavorite,
   async (
-    req: express.Request,
-
+    req: express.Request<
+      {},
+      {},
+      {
+        userId: string;
+        entryIds: string[];
+        title?: string;
+        entry?: string;
+        category?: string;
+        favorite?: boolean;
+      }
+    >,
     res: express.Response<IResponse>
   ) => {
     try {
+      console.log("/EDIT MANY", req.body);
       const errors = validationResult(req);
       console.log(errors);
       if (
@@ -55,32 +79,36 @@ router.post(
           .json(genericResponses.missing_body_fields());
       }
 
-      const { userId, journalId, title, entry, category, favorite } = req.body;
+      const { userId, entryIds, title, entry, category, favorite } = req.body;
       const query: {
-        ["journals.$.title"]?: string;
-        ["journals.$.entry"]?: string;
-        ["journals.$.category"]?: string;
-        ["journals.$.favorite"]?: boolean;
+        ["entries.$.title"]?: string;
+        ["entries.$.entry"]?: string;
+        ["entries.$.category"]?: string;
+        ["entries.$.favorite"]?: boolean;
       } = {};
 
       if (title) {
-        query["journals.$.title"] = title;
+        query["entries.$.title"] = title;
       }
 
       if (entry) {
-        query["journals.$.entry"] = entry;
+        query["entries.$.entry"] = entry;
       }
 
       if (category) {
-        query["journals.$.category"] = category;
+        query["entries.$.category"] = category;
       }
 
-      const doc = await updateOne(
-        {
-          _id: ObjectId.createFromHexString(userId),
-          "journals._id": ObjectId.createFromHexString(journalId),
-        },
+      if (favorite !== undefined) {
+        query["entries.$.favorite"] = Boolean(favorite); // TODO: why is the boolean getting converted to a string?
+      }
 
+      console.log("QUERY", query);
+      const doc = await updateMany(
+        {
+          _id: new ObjectId(userId),
+          "entries._id": { $in: entryIds.map((id) => new ObjectId(id)) },
+        },
         {
           $set: query,
         }
@@ -113,6 +141,7 @@ router.post(
         .status(statusCodes.success)
         .json(genericResponses.success(userDoc));
     } catch (error) {
+      console.log(error);
       return handleCaughtErrorResponse(error, req, res);
     }
   }
